refactor: uniform in-memory and sql store implementations